--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,10 +11,10 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="13dp"
+        android:layout_marginStart="13dp"
         android:layout_marginBottom="550dp"
         android:text="@string/welcome_to_skin_disease_detector"
         android:textColor="@color/light_red"
@@ -31,10 +31,10 @@
         android:id="@+id/button"
         android:layout_width="180dp"
         android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="19dp"
+        android:layout_marginStart="19dp"
         android:layout_marginBottom="393dp"
         android:backgroundTint="@color/light_green"
         android:text="@string/disease_analysis"
@@ -50,10 +50,10 @@
         android:id="@+id/button2"
         android:layout_width="180dp"
         android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="108dp"
+        android:layout_marginStart="108dp"
         android:layout_marginBottom="273dp"
         android:backgroundTint="@color/light_green"
         android:text="@string/result_history"
@@ -67,10 +67,10 @@
         android:id="@+id/button3"
         android:layout_width="180dp"
         android:layout_height="50dp"
-        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_marginLeft="215dp"
+        android:layout_marginStart="215dp"
         android:layout_marginBottom="142dp"
         android:backgroundTint="@color/light_green"
         android:text="@string/setting"
