--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -34,8 +34,8 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerInParent="true"
-        android:layout_marginEnd="42dp"
-        android:layout_marginBottom="112dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="85dp"
         android:backgroundTint="@color/light_green"
         android:text="@string/back" />
 
@@ -46,9 +46,21 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentBottom="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="172dp"
-        android:layout_marginBottom="95dp"
+        android:layout_marginLeft="170dp"
+        android:layout_marginBottom="64dp"
         android:background="@drawable/round_button"
         android:gravity="center_vertical|center_horizontal"
         android:textColor="#fff" />
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="104dp"
+        android:layout_height="99dp"
+        android:layout_alignParentRight="true"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:layout_marginRight="291dp"
+        android:layout_marginBottom="57dp"
+        tools:srcCompat="@tools:sample/avatars" />
+
 </RelativeLayout>
